# pride

./: .gitignore  Cargo.toml  default.nix  flake.nix
docs/: README.md
src/: lib.rs  main.rs
